# SimpleFS

./: README.md
docs/1.0.2/csharp/html/: annotated.html  class_mku_1_1_android_1_1_f_s_1_1_file_1_1_android_file-members.html  class_mku_1_1_android_1_1_f_s_1_1_file_1_1_android_file.html  class_mku_1_1_android_1_1_f_s_1_1_file_1_1_android_file_system-members.html  class_mku_1_1_android_1_1_f_s_1_1_file_1_1_android_file_system.html  class_mku_1_1_android_1_1_f_s_1_1_streams_1_1_android_file_stream-members.html  class_mku_1_1_android_1_1_f_s_1_1_streams_1_1_android_file_stream.html  class_mku_1_1_f_s_1_1_drive_1_1_utils_1_1_file_commander-members.html  class_mku_1_1_f_s_1_1_drive_1_1_utils_1_1_file_commander.html  class_mku_1_1_f_s_1_1_drive_1_1_utils_1_1_file_commander_1_1_batch_copy_options-members.html  class_mku_1_1_f_s_1_1_drive_1_1_utils_1_1_file_commander_1_1_batch_copy_options.html  (+122 more)
scripts/docs/: Doxyfile.NET  DoxyfileAndroid.NET  DoxyfilePython  gendocs.sh
src/python/simple_fs/: pyproject.toml
src/python/simple_fs/simple_fs/: __init__.py
src/python/simple_fs/simple_fs/fs/: __init__.py
src/python/simple_fs/simple_fs/fs/drive/: __init__.py  virtual_drive.py
src/python/simple_fs/simple_fs/fs/drive/utils/: __init__.py  file_utils.py
src/python/simple_fs/simple_fs/fs/file/: __init__.py  credentials.py  file.py  http_file.py  http_sync_client.py  ifile.py  ivirtual_file.py  ws_file.py
src/python/simple_fs/simple_fs/fs/streams/: __init__.py  file_stream.py  http_file_stream.py  ws_file_stream.py
src/typescript/simple-fs/: package-lock.json
(+339 files in other folders)
